--- a/config/userservice-dev.yml
+++ b/config/userservice-dev.yml
@@ -1,6 +1,6 @@
 sp:
   user‐service:
-    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8,\"username\":\"def\",\"password\":\"456\"},{\"id\":9,\"username\":\"ghi\",\"password\":\"789\"}]"
+    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8,\"username\":\"def\",\"password\":\"456\"},{\"id\":99,\"username\":\"ghi\",\"password\":\"789\"}]"
 
 spring:
   application:
@@ -13,6 +13,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
       
 ---
 spring:
