--- a/config/userservice-dev.yml
+++ b/config/userservice-dev.yml
@@ -5,6 +5,11 @@ sp:
 spring:
   application:
     name: userservice
+  rabbitmq:
+    host: 192.168.186.132
+    port: 5672
+    username: admin
+    password: admin
 #    
 #server:
 #  port: 8101
